[gd_scene load_steps=7 format=2]

[ext_resource path="res://level_components/StandardTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://level_components/BackgroundRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://level_components/player_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://level_components/LinearPlatformControl.gd" type="Script" id=4]
[ext_resource path="res://level_components/MovingPlatform.gd" type="Script" id=5]
[ext_resource path="res://level_components/PlatformTilemap.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]

[node name="ColorRect" parent="." instance=ExtResource( 2 )]

[node name="MainTilemap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 65535, 1, 3, 20, 1, 3, 131071, 1, 65539, 65552, 8, 0, 65556, 1, 65539, 196607, 1, 65539, 131087, 6, 65538, 131088, 6, 65536, 131089, 6, 0, 131092, 1, 65539, 262143, 1, 65539, 196623, 1, 196608, 196624, 1, 196609, 196625, 1, 196609, 196626, 1, 196610, 196628, 1, 65539, 327679, 1, 65539, 262164, 1, 65539, 393215, 1, 65539, 327700, 1, 65539, 458751, 1, 65539, 393236, 1, 65539, 524287, 1, 65539, 458772, 1, 65539, 589823, 1, 65539, 524308, 1, 65539, 655359, 1, 65539, 589844, 1, 65539, 720895, 1, 65539, 655380, 1, 65539, 786431, 1, 65539, 720916, 1, 65539, 851967, 1, 65539, 786433, 8, 0, 786441, 7, 0, 786452, 1, 65539, 917503, 1, 0, 851968, 1, 2, 851973, 6, 1, 851976, 6, 65536, 851977, 6, 65537, 851978, 6, 65538, 851979, 6, 1, 851982, 6, 0, 851983, 6, 2, 851984, 6, 65537, 851988, 1, 65539, 983039, 1, 65536, 917504, 1, 4, 917505, 1, 1, 917506, 1, 1, 917507, 1, 1, 917508, 1, 1, 917509, 1, 1, 917510, 1, 1, 917511, 1, 1, 917512, 1, 1, 917513, 1, 1, 917514, 1, 1, 917515, 1, 1, 917516, 1, 1, 917517, 1, 1, 917518, 1, 1, 917519, 1, 1, 917520, 1, 1, 917521, 1, 1, 917522, 1, 1, 917523, 1, 1, 917524, 1, 0, 1048575, 1, 65536, 983040, 1, 65537, 983041, 1, 65537, 983042, 1, 65537, 983043, 1, 65537, 983044, 1, 65537, 983045, 1, 65537, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65537, 983053, 1, 65537, 983054, 1, 65537, 983055, 1, 65537, 983056, 1, 65537, 983057, 1, 65537, 983058, 1, 65537, 983059, 1, 65537, 983060, 1, 65538, 1114111, 1, 131072, 1048576, 1, 131073, 1048577, 1, 131073, 1048578, 1, 131073, 1048579, 1, 131073, 1048580, 1, 131073, 1048581, 1, 131073, 1048582, 1, 131073, 1048583, 1, 131073, 1048584, 1, 131073, 1048585, 1, 131073, 1048586, 1, 131073, 1048587, 1, 131073, 1048588, 1, 131073, 1048589, 1, 131073, 1048590, 1, 131073, 1048591, 1, 131073, 1048592, 1, 131073, 1048593, 1, 131073, 1048594, 1, 131073, 1048595, 1, 131073, 1048596, 1, 131074 )

[node name="MovingPlatform" type="Node2D" parent="."]
position = Vector2( 336, 368 )
script = ExtResource( 5 )

[node name="LinearPlatformControl" type="Node" parent="MovingPlatform"]
script = ExtResource( 4 )
a = -1.0

[node name="PlatformTilemap" parent="MovingPlatform" instance=ExtResource( 6 )]
tile_data = PoolIntArray( -458752, 5, 0, -327686, 6, 0, -262151, 2, 196608, -262150, 2, 196610, -131081, 4, 2, -196608, 5, 0, -65544, 6, 65536, -9, 2, 196608, -8, 2, 196609, -7, 2, 196610, 65536, 5, 0 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 432 )
[connection signal="moved" from="KinematicBody2D" to="MovingPlatform" method="_on_KinematicBody2D_moved"]
